# data-engineering-case

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml
dashboard/: Data Engineering FinOps Dashboard.lvdash.json
notebooks/: 01_ingest_bronze.py  02_transform_silver.py  03_transform_gold_sponsor.py  04_transform_gold_condition.py  utils.py
