[project]
name = "data-engineering-case"
version = "0.1.0"
description = "Data pipeline ingesting ClinicalTrials.gov data into Databricks"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31,<3",
    "databricks-sdk>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "pre-commit>=4,<5",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
